<resources>
    <string name="app_name">Shopping List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">Info</string>
    <string name="reset">Reset</string>
    <string name="delete">delete</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound ON</string>
    <string name="then">Then</string>
    <string name="now">Now</string>
    <string name="general">Preferences</string>
    <string name="show_message">Show Message at Start</string>
    <string name="show_now_picture">Show Now Picture</string>
    <string name="debug_build">This is a debug build.</string>
    <string name="item_read">I have read this</string>
    <string name="copyright">Copyright &#169; 2020, Clara Martinez Rubio</string>

    <!--    Alert-->
    <string name="ok">OK</string>
    <string name="alert">Alert</string>
    <string name="deletion_alert">Successfully deleted: %s</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="title">Item Name</string>
    <string name="food_category">Other Comments</string>
    <string name="store">Store</string>
    <string name="entry_title">Enter Book Info</string>
    <string name="creation_date">04/26/2020</string>

    <string-array name="typesArray">
        <item>Fruit</item>
        <item>Vegetable</item>
        <item>Dairy</item>
        <item>Meat</item>
        <item>Dessert</item>
        <item>Pet Food</item>
        <item>Cleaning Supplies</item>
        <item>Precooked Food</item>
    </string-array>


</resources>
