<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.cmarti21.shoppinglist.database.Item" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/recycler_photo_imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:imageResource="@{item.categoryType}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/fruit_icon" />


        <TextView
            android:id="@+id/recycler_title_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{item.title}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recycler_photo_imageView"
            app:layout_constraintTop_toTopOf="@+id/recycler_photo_imageView"
            tools:text="@string/title" />


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/recycler_title_textView"
            app:layout_constraintTop_toBottomOf="@+id/recycler_title_textView" />


        <TextView
            android:id="@+id/recycler_category_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{item.category}"
            app:layout_constraintEnd_toEndOf="@+id/recycler_title_textView"
            app:layout_constraintStart_toStartOf="@+id/recycler_title_textView"
            app:layout_constraintEnd_toStartOf="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/recycler_store_textView"
            tools:text="@string/food_category" />


        <TextView
            android:id="@+id/recycler_store_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{item.store}"
            app:layout_constraintEnd_toStartOf="@+id/checkBox"
            app:layout_constraintStart_toStartOf="@+id/recycler_title_textView"
            app:layout_constraintTop_toBottomOf="@+id/recycler_title_textView"
            tools:text="@string/store" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>